[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tma-toolkit"
version = "0.1.0"
description = "YAML-driven XSPerfAccumulate instrumentation and top-down reporting toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OurCompArchGroup" }
]
dependencies = [
  "PyYAML>=6.0",
  "matplotlib>=3.7"
]

[project.scripts]
tma-toolkit = "tma:main"

[tool.setuptools]
py-modules = ["tma", "tma_apply", "tma_report"]
